# hans_ii_midi_c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bsc.c  bsc.cpp  bsc.h  hans_ii_midi  hans_ii_midi.service  main.c  main.cpp  update.sh
